--- a/objects.html
+++ b/objects.html
@@ -427,17 +427,16 @@
                 } else {
                     defaultLocation = val;
                 }
-
             }
         });
     }
 
     const circle = new Circle(10);
     circle.draw();
-    //output:
-    computeOptimumLocation - function called
-    draw
-    {x: 15, y: 20}
+    // output:
+    // computeOptimumLocation - function called
+    // draw
+    // {x: 15, y: 20}
     </code>
 </pre>
                         <p>So in the last lecture, we converted these two members to private members. Now more accurately, these are not private members,
