--- a/objects.html
+++ b/objects.html
@@ -191,7 +191,7 @@
                             <li>One of the confusing concepts in JavaScript is here, functions are objects. So this circle function we have here is actually an object.
                                 Don't believe me, let me show you, so circle, look these are all the members of the circle function or circle object.
                                 <br>
-                                <img src="./img/functions-objectsobject.JPG" alt="Functions are objects" title="Functions are objects" />
+                                <img src="./img/functions-objectsobject.JPG" class="img-thumbnail img-responsive" alt="Functions are objects" title="Functions are objects" />
                                 <br>
                                 So the purple objects are methods like call, bind, apply, and the blue icons are properties.
                             </li>
@@ -203,14 +203,14 @@
                             <li>
                                     In JavaScript we have two categories of types. On one side we have value types, also called <strong>primitives or value types</strong>, on the other side we have <strong>reference types</strong>.
                                     <br>
-                                    <img src="./img/types.JPG" alt="Values vs Reference Types" title="Values vs Reference Types" />
+                                    <img src="./img/types.JPG" alt="Values vs Reference Types" title="Values vs Reference Types" class="img-thumbnail img-responsive"/>
                             </li>
                             <li>
                                     I'm going to define two primitives, x and y. I'm going to set y to x, so here y is 10, now I'm going to change the value of x to 20, what I want you to note here,
                                     is that x and y are two independent variables, so, let's save the changes, go back in the console, let's log x, x is 20, and y
                                     is 10, they are independent. 
                                     <br>
-                                    <img src="./img/types-2.JPG" alt="Values vs Reference Types" title="Values vs Reference Types" />
+                                    <img src="./img/types-2.JPG" alt="Values vs Reference Types" title="Values vs Reference Types" class="img-thumbnail img-responsive"/>
                                     <br>
                                     So when we work with primitives. This value, this value that we have here is
                                     stored inside of this variable. When we copy that variable that value that is stored in the variable is
@@ -221,7 +221,7 @@
                                 Now let's see what happens if we use a reference type or an object here. So I'm going to
                                 change this to an object that has a property called value. And then instead of saying x to 20, I'm going to set x.value to 20.
                                 <br>
-                                <img src="./img/types-3.JPG" alt="Values vs Reference Types" title="Values vs Reference Types" />
+                                <img src="./img/types-3.JPG" alt="Values vs Reference Types" title="Values vs Reference Types" class="img-thumbnail img-responsive"/>
                                 <br>
                                 So save the changes, back in the console, let's log x so you can see value property is 20,
                                 now let's log y, you can see the value property of y is also 20. So this is the takeaway. When we use
@@ -233,7 +233,7 @@
                             <li>
                                 <strong>So here's the conclusion. Primitives are copied by value, reference types or objects are copied by by their reference.</strong>
                                 <br>
-                                <img src="./img/types-4.JPG" alt="Values vs Reference Types" title="Values vs Reference Types" />
+                                <img src="./img/types-4.JPG" alt="Values vs Reference Types" title="Values vs Reference Types" class="img-thumbnail img-responsive"/>
                                 <br>
 <pre>
     <code>
@@ -269,7 +269,7 @@
                                 that we generate on the fly on the server. So we can always add something extra to an existing object.
                                 Because we don't have classes, we don't need to define these properties ahead of time.
                                 <br>
-                                <img src="./img/add-property.JPG" alt="Adding or Removing Properties" title="Adding or Removing Properties" />
+                                <img src="./img/add-property.JPG" alt="Adding or Removing Properties" title="Adding or Removing Properties" class="img-thumbnail img-responsive"/>
                                 <br>
                                 We can add them whenever we need them, and that makes JavaScript extremely powerful and easy to work with. In languages like C#
                                 or Java, every time we want to implement scenarios like this we have to go back and change our classes. So here, let me go 
@@ -296,7 +296,7 @@
                                 one or more properties from an object. So, we use the delete operator, and then reference the property name. So,
                                 circle.location. Again, here we can use the .notation or brackets.
                                 <br>
-                                <img src="./img/del-property.JPG" alt="Adding or Removing Properties" title="Adding or Removing Properties" />
+                                <img src="./img/del-property.JPG" alt="Adding or Removing Properties" title="Adding or Removing Properties" class="img-thumbnail img-responsive"/>
                             </li>
                         </ul>
                         <hr>
@@ -319,7 +319,7 @@
                                 if an object has a given property. For that we use the in operator. So, if here we add the name of the property on the string, if radius
                                 is in circle, we do a console.log of circle as a radius. Okay? Save the changes, and here's our message.
                                 <br>
-                                <img src="./img/enum-property.JPG" alt="Enumerating Properties" title="Enumerating Properties" />
+                                <img src="./img/enum-property.JPG" alt="Enumerating Properties" title="Enumerating Properties" class="img-thumbnail img-responsive"/>
                                 <br>
                                 <strong>So remember :
                                     <ol>
